# helpdesk-agent-demo

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/agents/: design-architect.md  requirements-analyst.md  task-planner.md
.claude/skills/implement/: SKILL.md
.claude/skills/implement-check/: SKILL.md
.claude/skills/implement-next/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/spec-design/: SKILL.md
.claude/skills/spec-driven-dev/: SKILL.md
.claude/skills/spec-requirements/: SKILL.md
.claude/skills/spec-tasks/: SKILL.md
.docker/: Dockerfile
backend/: Dockerfile  pyproject.toml
backend/api/: dependencies.py  main.py
backend/common/: configs.py  errors.py  logger.py  retry.py  schemas.py  streaming.py
backend/db/: database.py  repository.py
docs/: DESIGN.md  PLAN.md  REQUIREMENTS.md  TASKS.md
docs/features/01-infrastructure/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/01-shared-infrastructure/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/02-backend-core/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/02-portal-frontend/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/03-helpdesk-agent/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/03-search-tools/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/features/04-data-analysis-agent/: DESIGN.md  TASKS.md  (+1 more)
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: api.ts
(+34 files in other folders)
